welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:20: error: not found: value fail
		return fail
                       ^